Comments added to css and time element in html.

--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -7,7 +7,9 @@
 body {
     background-color: #d9dcd6;
 }
-/* Header needs to be consolidated */
+
+/* updated this for the header*/
+
 header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -19,10 +21,11 @@ header h1 {
     display: inline-block;
     font-size: 48px;
 }
-
+/* This is a different color than the rest of the header*/
 header h1 .seo {
     color: #d9dcd6;
 }
+
 
 header nav {
     padding-top: 15px;
@@ -120,13 +123,13 @@ main section h2 {
   font-size: 36px;
 }
 
-.footer {
+footer {
     padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
 }
 
-.footer h2 {
+footer h2 {
     font-size: 20px;
 }
