--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -53,6 +53,7 @@ p {
     font-size: 16px;
 }
 
+/*This is the hero image*/
 figure {
     height: 800px;
     width: 100%;
@@ -72,6 +73,7 @@ figure {
     margin-left: 25px;
 }
 
+/*This is the container for the website*/
 main {
     width: 75%;
     display: inline-block;
